--- a/styles/sass/base/_global.scss
+++ b/styles/sass/base/_global.scss
@@ -14,7 +14,7 @@ html{
 }
 body{
     height: 100vh;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Poppins', sans-serif;
   
        p{
         cursor: default; 
