--- a/styles/sass/components/_header.scss
+++ b/styles/sass/components/_header.scss
@@ -49,12 +49,19 @@ header {
     .logo-container {
         display: flex;
         gap: 1rem;
+        background-color: #f9feff;
+        padding: 0.5rem 1rem;
+        border-radius: 64px;
+        border: 1px solid #aad9ff;
     }
 
 
     .big-screen-logo {
+        img{
+            width: 160px;
+        }
         @media(max-width:768px) {
-            display: none;
+            // display: none;
         }
     }
 
