--- a/styles/sass/pages-style/app-page.scss
+++ b/styles/sass/pages-style/app-page.scss
@@ -83,10 +83,13 @@
            padding: 2rem;
     
         }
-        @media(max-width:576px) {
-            padding: 1rem;
-            padding-top: 2rem;
+        @media(max-width:768px) {
+            padding-top: 4rem;
          }
+        // @media(max-width:576px) {
+        //     padding: 1rem;
+        //     padding-top: 2rem;
+        //  }
 
 
 
