--- a/styles/sass/pages-style/login-page.scss
+++ b/styles/sass/pages-style/login-page.scss
@@ -17,6 +17,7 @@
     img{
         width: 100%;
         height: 100%;
+        object-fit: cover;
     }
 }
 
@@ -50,6 +51,10 @@
     display: flex;
     justify-content: center;
     align-items: start;
+
+    img{
+        width:250px;
+    }
 }
 .login-btn{
     width: 100%;
