--- a/styles/sass/main.css
+++ b/styles/sass/main.css
@@ -2895,6 +2895,7 @@ header .navbar {
   align-items: center;
   justify-content: space-between;
   padding-bottom: 0.5rem;
+  padding-top: 0;
   border-bottom: 1px solid #ADADAD;
   margin-bottom: 0.5rem;
 }
