--- a/styles/sass/components/_header.scss
+++ b/styles/sass/components/_header.scss
@@ -13,6 +13,7 @@ header {
         align-items: center;
         justify-content: space-between;
         padding-bottom: .5rem;
+        padding-top: 0;
         border-bottom: 1px solid $border-gray-lt2;
         margin-bottom: .5rem;
 
